[gd_scene load_steps=2 format=3 uid="uid://c6xyf3yh8xqm7"]

[ext_resource type="Script" uid="uid://k23o12hgexg3" path="res://addons/sprite_collision_generator/collision_dock.gd" id="1_abc123"]

[node name="CollisionGenerator" type="Control"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abc123")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Sprite2D Collision Generator"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PreviewCheckBox" type="CheckBox" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.5272278, 1, 0.5607018, 1)
theme_override_font_sizes/font_size = 36
text = "Live Preview"

[node name="ToleranceControl" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ToleranceControl"]
layout_mode = 2
text = "Precision:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ToleranceControl"]
layout_mode = 2

[node name="ToleranceSlider" type="HSlider" parent="VBoxContainer/ToleranceControl/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 255.0
value = 128.0
tick_count = 10
ticks_on_borders = true

[node name="ToleranceValue" type="Label" parent="VBoxContainer/ToleranceControl/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "128"
horizontal_alignment = 2

[node name="ConvexHullCheckBox" type="CheckBox" parent="VBoxContainer/ToleranceControl"]
layout_mode = 2
text = "Make Convex"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MaxPointsControl" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MaxPointsControl"]
layout_mode = 2
text = "Max Points:"

[node name="MaxPointsSpinBox" type="SpinBox" parent="VBoxContainer/MaxPointsControl"]
layout_mode = 2
min_value = 10.0
max_value = 1000.0
value = 500.0
alignment = 1

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MinAreaControl" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MinAreaControl"]
layout_mode = 2
text = "Minimum Part Size (pixels):"

[node name="MinAreaSpinBox" type="SpinBox" parent="VBoxContainer/MinAreaControl"]
layout_mode = 2
max_value = 10000.0
value = 100.0
alignment = 1

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="XOffsetControl" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/XOffsetControl"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/XOffsetControl/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "X Offset:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/XOffsetControl"]
layout_mode = 2

[node name="XOffsetSlider" type="HSlider" parent="VBoxContainer/XOffsetControl/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -10.0
max_value = 10.0
step = 0.1

[node name="XOffsetSpinBox" type="SpinBox" parent="VBoxContainer/XOffsetControl/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.1

[node name="ResetXButton" type="Button" parent="VBoxContainer/XOffsetControl/HBoxContainer"]
layout_mode = 2
text = "R"

[node name="HSeparator5a" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="YOffsetControl" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/YOffsetControl"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/YOffsetControl/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Y Offset:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/YOffsetControl"]
layout_mode = 2

[node name="YOffsetSlider" type="HSlider" parent="VBoxContainer/YOffsetControl/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -10.0
max_value = 10.0
step = 0.1

[node name="YOffsetSpinBox" type="SpinBox" parent="VBoxContainer/YOffsetControl/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.1

[node name="ResetYButton" type="Button" parent="VBoxContainer/YOffsetControl/HBoxContainer"]
layout_mode = 2
text = "R"

[node name="HSeparator5b" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ExpansionControl" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ExpansionControl"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/ExpansionControl/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Expansion:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ExpansionControl"]
layout_mode = 2

[node name="ExpansionSlider" type="HSlider" parent="VBoxContainer/ExpansionControl/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -10.0
max_value = 10.0
step = 0.1

[node name="ExpansionSpinBox" type="SpinBox" parent="VBoxContainer/ExpansionControl/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
min_value = -10.0
max_value = 10.0
step = 0.1

[node name="ResetExpansionButton" type="Button" parent="VBoxContainer/ExpansionControl/HBoxContainer"]
layout_mode = 2
text = "R"

[node name="HSeparator5c" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TargetNodeControl" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TargetNodeControl"]
layout_mode = 2
text = "Target Node (optional):"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TargetNodeControl"]
layout_mode = 2

[node name="PickNodeButton" type="Button" parent="VBoxContainer/TargetNodeControl/HBoxContainer"]
layout_mode = 2
text = "Set Target"

[node name="TargetNodeLabel" type="Label" parent="VBoxContainer/TargetNodeControl"]
layout_mode = 2
text = "None (use sprite)"

[node name="TargetHelp" type="Label" parent="VBoxContainer/TargetNodeControl"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Select a node in scene tree, then click 'Set Target'"
autowrap_mode = 3

[node name="HSeparator6" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Generate Collision"

[node name="HSeparator7" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Polygons: 0 | Points: 0"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Select a Sprite2D node to begin"
horizontal_alignment = 1
autowrap_mode = 3
